src/xotl/fl/parsers/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     expr_factor -> expr_factor SPACE expr_factor
Rule 2     expr_term9 -> expr_factor infixr_operator_9 expr_term9
Rule 3     expr_term9 -> expr_factor
Rule 4     expr_term7 -> expr_term7 infixl_operator_7 expr_term9
Rule 5     expr_term7 -> expr_term9
Rule 6     expr_term6 -> expr_term6 infixl_operator_6 expr_term7
Rule 7     expr_term6 -> expr_term7
Rule 8     expr_term2 -> expr_term2 infixl_operator_2 expr_term6
Rule 9     expr_term2 -> expr_term6
Rule 10    expr_term1 -> expr_term2 infixr_operator_2 expr_term1
Rule 11    expr_term1 -> expr_term2
Rule 12    expr_term0 -> expr infixl_operator_0 expr_term0
Rule 13    expr_term0 -> expr_term1
Rule 14    st_expr -> expr
Rule 15    expr -> expr_term0
Rule 16    expr_factor -> literal
Rule 17    expr_factor -> identifier
Rule 18    expr_factor -> enclosed_expr
Rule 19    expr_factor -> letexpr
Rule 20    expr_factor -> where_expr
Rule 21    expr_factor -> lambda_expr
Rule 22    expr_factor -> simple_list_expr
Rule 23    expr_factor -> simple_tuple_expr
Rule 24    st_type_expr -> type_expr
Rule 25    st_type_expr -> constrained_type_expr
Rule 26    literal -> number
Rule 27    literal -> concrete_number
Rule 28    literal -> string
Rule 29    literal -> char
Rule 30    literal -> date
Rule 31    literal -> datetime
Rule 32    literal -> date_interval
Rule 33    literal -> datetime_interval
Rule 34    simple_tuple_expr -> LPAREN _list_items RPAREN
Rule 35    simple_list_expr -> LBRACKET _list_items RBRACKET
Rule 36    _list_items -> expr _list_items_cont
Rule 37    _list_items_cont -> COMMA expr _list_items_cont
Rule 38    _list_items -> empty
Rule 39    _list_items_cont -> empty
Rule 40    date -> DATE
Rule 41    datetime -> DATETIME
Rule 42    date_interval -> DATE_INTERVAL
Rule 43    datetime_interval -> DATETIME_INTERVAL
Rule 44    char -> CHAR
Rule 45    string -> STRING
Rule 46    identifier -> _identifier
Rule 47    _identifier -> UNDER_IDENTIFIER
Rule 48    _identifier -> UPPER_IDENTIFIER
Rule 49    _identifier -> LOWER_IDENTIFIER
Rule 50    enclosed_expr -> LPAREN expr RPAREN
Rule 51    expr_factor -> enclosed_expr expr_factor
Rule 52    expr_factor -> expr_factor enclosed_expr
Rule 53    enclosed_expr -> _enclosed_operator
Rule 54    _enclosed_operator -> LPAREN _st_operator RPAREN
Rule 55    infixr_operator_9 -> DOT_OPERATOR
Rule 56    infixl_operator_7 -> STAR
Rule 57    infixl_operator_7 -> SLASH
Rule 58    infixl_operator_7 -> DOUBLESLASH
Rule 59    infixl_operator_7 -> PERCENT
Rule 60    infixl_operator_6 -> PLUS
Rule 61    infixl_operator_6 -> MINUS
Rule 62    infixr_operator_2 -> COLON
Rule 63    infixl_operator_2 -> OPERATOR
Rule 64    infixl_operator_2 -> ARROW
Rule 65    infixl_operator_2 -> ATSYM
Rule 66    infixl_operator_0 -> TICK_OPERATOR
Rule 67    _st_operator -> infixl_operator_2
Rule 68    _st_operator -> infixr_operator_2
Rule 69    _st_operator -> infixl_operator_6
Rule 70    _st_operator -> infixl_operator_7
Rule 71    _st_operator -> infixr_operator_9
Rule 72    _st_operator -> COMMA
Rule 73    number -> BASE10_INTEGER
Rule 74    number -> BASE16_INTEGER
Rule 75    number -> BASE8_INTEGER
Rule 76    number -> BASE2_INTEGER
Rule 77    number -> FLOAT
Rule 78    concrete_number -> number ANNOTATION string
Rule 79    concrete_number -> number ANNOTATION char
Rule 80    concrete_number -> number ANNOTATION identifier
Rule 81    empty -> <empty>
Rule 82    lambda_expr -> BACKSLASH patterns ARROW expr
Rule 83    pattern -> possibly_named_pattern
Rule 84    simple_pattern -> literal
Rule 85    simple_pattern -> cons_pattern
Rule 86    simple_pattern -> list_cons_pattern
Rule 87    simple_pattern -> tuple_cons_pattern
Rule 88    simple_pattern -> empty_list_pattern
Rule 89    simple_pattern -> empty_tuple_pattern
Rule 90    simple_pattern -> LOWER_IDENTIFIER
Rule 91    simple_pattern -> UNDER_IDENTIFIER
Rule 92    possibly_named_pattern -> _pattern_name simple_pattern
Rule 93    _pattern_name -> LOWER_IDENTIFIER ATSYM
Rule 94    _pattern_name -> empty
Rule 95    simple_pattern -> UPPER_IDENTIFIER
Rule 96    list_cons_pattern -> pattern COLON pattern
Rule 97    list_cons_pattern -> simple_pattern COLON simple_pattern
Rule 98    cons_pattern -> LPAREN _identifier SPACE patterns RPAREN
Rule 99    simple_pattern -> LPAREN pattern RPAREN
Rule 100   simple_pattern -> LPAREN simple_pattern RPAREN
Rule 101   empty_list_pattern -> LBRACKET RBRACKET
Rule 102   empty_tuple_pattern -> LPAREN RPAREN
Rule 103   tuple_cons_pattern -> LPAREN patterns_comma_sep RPAREN
Rule 104   patterns -> pattern _patterns
Rule 105   patterns -> simple_pattern _patterns
Rule 106   patterns_comma_sep -> pattern _patterns_comma
Rule 107   patterns_comma_sep -> simple_pattern _patterns_comma
Rule 108   _patterns -> SPACE pattern _patterns
Rule 109   _patterns -> SPACE simple_pattern _patterns
Rule 110   _patterns_comma -> COMMA pattern _patterns_comma_trail
Rule 111   _patterns_comma -> COMMA simple_pattern _patterns_comma_trail
Rule 112   _patterns_comma_trail -> COMMA pattern _patterns_comma_trail
Rule 113   _patterns_comma_trail -> COMMA simple_pattern _patterns_comma_trail
Rule 114   _patterns -> empty
Rule 115   _patterns_comma_trail -> empty
Rule 116   equation -> _identifier _patterns EQ expr
Rule 117   equation -> _enclosed_operator _patterns EQ expr
Rule 118   equations -> equation _equation_set
Rule 119   _equation_set -> PADDING equation _equation_set
Rule 120   _equation_set -> empty
Rule 121   letexpr -> KEYWORD_LET SPACE local_definitions KEYWORD_IN SPACE st_expr
Rule 122   where_expr -> expr KEYWORD_WHERE SPACE equations
Rule 123   where_expr -> expr KEYWORD_WHERE PADDING equations
Rule 124   type_expr -> type_scheme type_function_expr
Rule 125   type_expr -> type_scheme type_term
Rule 126   type_scheme -> empty
Rule 127   type_scheme -> KEYWORD_FORALL SPACE _type_scheme_generics
Rule 128   _type_scheme_generics -> _identifier SPACE _type_scheme_generics
Rule 129   _type_scheme_generics -> _identifier DOT_OPERATOR
Rule 130   type_function_expr -> type_term ARROW _maybe_padding type_function_expr
Rule 131   type_function_expr -> type_term
Rule 132   type_term -> type_app_expression
Rule 133   type_term -> type_factor
Rule 134   type_app_expression -> type_factor _app_args_non_empty
Rule 135   _app_args -> SPACE type_factor _app_args
Rule 136   _app_args_non_empty -> SPACE type_factor _app_args
Rule 137   _app_args -> empty
Rule 138   type_variable -> LOWER_IDENTIFIER
Rule 139   type_cons -> UPPER_IDENTIFIER
Rule 140   type_factor -> type_variable
Rule 141   type_factor -> type_cons
Rule 142   type_factor -> LPAREN _maybe_padding _type_expr_list _maybe_padding RPAREN
Rule 143   type_factor -> LPAREN RPAREN
Rule 144   _type_expr_list -> type_expr COMMA _type_expr_list_trail
Rule 145   _type_expr_list_trail -> type_expr COMMA _type_expr_list_trail
Rule 146   _type_expr_list_trail -> type_expr
Rule 147   type_factor -> LPAREN _maybe_padding type_expr _maybe_padding RPAREN
Rule 148   type_factor -> LBRACKET _maybe_padding type_expr _maybe_padding RBRACKET
Rule 149   constrained_type_expr -> _constrained_type_expr_bare
Rule 150   _constrained_type_expr_bare -> type_constraints FATARROW type_expr
Rule 151   _maybe_constrained_type_expr -> type_expr
Rule 152   _maybe_constrained_type_expr -> _constrained_type_expr_bare
Rule 153   instance -> KEYWORD_INSTANCE _maybe_constrained_type_expr KEYWORD_WHERE PADDING local_definitions
Rule 154   type_constraints -> _type_expr_list_trail
Rule 155   _maybe_padding -> PADDING
Rule 156   _maybe_padding -> empty
Rule 157   program -> definitions _trailing_new_lines
Rule 158   _trailing_new_lines -> empty
Rule 159   _trailing_new_lines -> NEWLINE _trailing_new_lines
Rule 160   definitions -> definition _definition_set
Rule 161   _definition_set -> newlines definition _definition_set
Rule 162   newlines -> NEWLINE _trailing_new_lines
Rule 163   _definition_set -> empty
Rule 164   _definition_set -> newlines
Rule 165   definition -> local_definition
Rule 166   definition -> datatype_definition
Rule 167   definition -> typeclass
Rule 168   definition -> instance
Rule 169   local_definition -> nametype_decl
Rule 170   local_definition -> valuedef
Rule 171   local_definitions -> local_definition _local_definition_set
Rule 172   _local_definition_set -> PADDING definition _local_definition_set
Rule 173   _local_definition_set -> empty
Rule 174   typeclass -> KEYWORD_CLASS _typeclass_def KEYWORD_WHERE PADDING local_definitions
Rule 175   _typeclass_def -> simple_type_constraint
Rule 176   _typeclass_def -> simple_type_constraints FATARROW simple_type_constraint
Rule 177   simple_type_constraint -> UPPER_IDENTIFIER SPACE type_variable
Rule 178   simple_type_constraints -> simple_type_constraint _simple_type_constraints
Rule 179   _simple_type_constraints -> COMMA simple_type_constraint _simple_type_constraints
Rule 180   _simple_type_constraints -> empty
Rule 181   valuedef -> equation
Rule 182   nametype_decl -> _identifier DOUBLE_COLON st_type_expr
Rule 183   nametype_decl -> LPAREN _st_operator RPAREN DOUBLE_COLON st_type_expr
Rule 184   datatype_definition -> _datatype_lhs EQ _data_rhs
Rule 185   _datatype_lhs -> KEYWORD_DATA SPACE UPPER_IDENTIFIER _cons_params
Rule 186   _cons_params -> SPACE LOWER_IDENTIFIER _cons_params
Rule 187   _cons_params -> empty
Rule 188   _data_rhs -> data_cons _data_conses
Rule 189   _data_conses -> _maybe_padding PIPE data_cons _data_conses
Rule 190   _data_conses -> empty
Rule 191   _data_conses -> _maybe_padding KEYWORD_DERIVING LPAREN _derivations_list RPAREN
Rule 192   _data_conses -> _maybe_padding KEYWORD_DERIVING UPPER_IDENTIFIER
Rule 193   data_cons -> _data_cons
Rule 194   _data_cons -> UPPER_IDENTIFIER _cons_args
Rule 195   _data_cons -> cons_arg OPERATOR cons_arg _cons_args
Rule 196   _cons_args -> SPACE cons_arg _cons_args
Rule 197   _cons_args -> empty
Rule 198   cons_arg -> type_variable
Rule 199   cons_arg -> type_cons
Rule 200   cons_arg -> _cons_arg_factor
Rule 201   _cons_arg_factor -> LPAREN type_expr RPAREN
Rule 202   _cons_arg_factor -> LBRACKET type_expr RBRACKET
Rule 203   _derivations_list -> UPPER_IDENTIFIER _derivations_list_trail
Rule 204   _derivations_list_trail -> COMMA UPPER_IDENTIFIER _derivations_list_trail
Rule 205   _derivations_list_trail -> empty

Terminals, with rules where they appear

ANNOTATION           : 78 79 80
ARROW                : 64 82 130
ATSYM                : 65 93
BACKSLASH            : 82
BASE10_INTEGER       : 73
BASE16_INTEGER       : 74
BASE2_INTEGER        : 76
BASE8_INTEGER        : 75
CHAR                 : 44
COLON                : 62 96 97
COMMA                : 37 72 110 111 112 113 144 145 179 204
DATE                 : 40
DATETIME             : 41
DATETIME_INTERVAL    : 43
DATE_INTERVAL        : 42
DOT_OPERATOR         : 55 129
DOUBLESLASH          : 58
DOUBLE_COLON         : 182 183
EQ                   : 116 117 184
FATARROW             : 150 176
FLOAT                : 77
KEYWORD_CLASS        : 174
KEYWORD_DATA         : 185
KEYWORD_DERIVING     : 191 192
KEYWORD_FORALL       : 127
KEYWORD_IN           : 121
KEYWORD_INSTANCE     : 153
KEYWORD_LET          : 121
KEYWORD_WHERE        : 122 123 153 174
LBRACKET             : 35 101 148 202
LOWER_IDENTIFIER     : 49 90 93 138 186
LPAREN               : 34 50 54 98 99 100 102 103 142 143 147 183 191 201
MINUS                : 61
NEWLINE              : 159 162
OPERATOR             : 63 195
PADDING              : 119 123 153 155 172 174
PERCENT              : 59
PIPE                 : 189
PLUS                 : 60
RBRACKET             : 35 101 148 202
RPAREN               : 34 50 54 98 99 100 102 103 142 143 147 183 191 201
SLASH                : 57
SPACE                : 1 98 108 109 121 121 122 127 128 135 136 177 185 186 196
STAR                 : 56
STRING               : 45
TICK_OPERATOR        : 66
UNDER_IDENTIFIER     : 47 91
UPPER_IDENTIFIER     : 48 95 139 177 185 192 194 203 204
error                : 

Nonterminals, with rules where they appear

_app_args            : 135 136
_app_args_non_empty  : 134
_cons_arg_factor     : 200
_cons_args           : 194 195 196
_cons_params         : 185 186
_constrained_type_expr_bare : 149 152
_data_cons           : 193
_data_conses         : 188 189
_data_rhs            : 184
_datatype_lhs        : 184
_definition_set      : 160 161
_derivations_list    : 191
_derivations_list_trail : 203 204
_enclosed_operator   : 53 117
_equation_set        : 118 119
_identifier          : 46 98 116 128 129 182
_list_items          : 34 35
_list_items_cont     : 36 37
_local_definition_set : 171 172
_maybe_constrained_type_expr : 153
_maybe_padding       : 130 142 142 147 147 148 148 189 191 192
_pattern_name        : 92
_patterns            : 104 105 108 109 116 117
_patterns_comma      : 106 107
_patterns_comma_trail : 110 111 112 113
_simple_type_constraints : 178 179
_st_operator         : 54 183
_trailing_new_lines  : 157 159 162
_type_expr_list      : 142
_type_expr_list_trail : 144 145 154
_type_scheme_generics : 127 128
_typeclass_def       : 174
char                 : 29 79
concrete_number      : 27
cons_arg             : 195 195 196
cons_pattern         : 85
constrained_type_expr : 25
data_cons            : 188 189
datatype_definition  : 166
date                 : 30
date_interval        : 32
datetime             : 31
datetime_interval    : 33
definition           : 160 161 172
definitions          : 157
empty                : 38 39 94 114 115 120 126 137 156 158 163 173 180 187 190 197 205
empty_list_pattern   : 88
empty_tuple_pattern  : 89
enclosed_expr        : 18 51 52
equation             : 118 119 181
equations            : 122 123
expr                 : 12 14 36 37 50 82 116 117 122 123
expr_factor          : 1 1 2 3 51 52
expr_term0           : 12 15
expr_term1           : 10 13
expr_term2           : 8 10 11
expr_term6           : 6 8 9
expr_term7           : 4 6 7
expr_term9           : 2 4 5
identifier           : 17 80
infixl_operator_0    : 12
infixl_operator_2    : 8 67
infixl_operator_6    : 6 69
infixl_operator_7    : 4 70
infixr_operator_2    : 10 68
infixr_operator_9    : 2 71
instance             : 168
lambda_expr          : 21
letexpr              : 19
list_cons_pattern    : 86
literal              : 16 84
local_definition     : 165 171
local_definitions    : 121 153 174
nametype_decl        : 169
newlines             : 161 164
number               : 26 78 79 80
pattern              : 96 96 99 104 106 108 110 112
patterns             : 82 98
patterns_comma_sep   : 103
possibly_named_pattern : 83
program              : 0
simple_list_expr     : 22
simple_pattern       : 92 97 97 100 105 107 109 111 113
simple_tuple_expr    : 23
simple_type_constraint : 175 176 178 179
simple_type_constraints : 176
st_expr              : 121
st_type_expr         : 182 183
string               : 28 78
tuple_cons_pattern   : 87
type_app_expression  : 132
type_cons            : 141 199
type_constraints     : 150
type_expr            : 24 144 145 146 147 148 150 151 201 202
type_factor          : 133 134 135 136
type_function_expr   : 124 130
type_scheme          : 124 125
type_term            : 125 130 131
type_variable        : 140 177 198
typeclass            : 167
valuedef             : 170
where_expr           : 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (157) program -> . definitions _trailing_new_lines
    (160) definitions -> . definition _definition_set
    (165) definition -> . local_definition
    (166) definition -> . datatype_definition
    (167) definition -> . typeclass
    (168) definition -> . instance
    (169) local_definition -> . nametype_decl
    (170) local_definition -> . valuedef
    (184) datatype_definition -> . _datatype_lhs EQ _data_rhs
    (174) typeclass -> . KEYWORD_CLASS _typeclass_def KEYWORD_WHERE PADDING local_definitions
    (153) instance -> . KEYWORD_INSTANCE _maybe_constrained_type_expr KEYWORD_WHERE PADDING local_definitions
    (182) nametype_decl -> . _identifier DOUBLE_COLON st_type_expr
    (183) nametype_decl -> . LPAREN _st_operator RPAREN DOUBLE_COLON st_type_expr
    (181) valuedef -> . equation
    (185) _datatype_lhs -> . KEYWORD_DATA SPACE UPPER_IDENTIFIER _cons_params
    (47) _identifier -> . UNDER_IDENTIFIER
    (48) _identifier -> . UPPER_IDENTIFIER
    (49) _identifier -> . LOWER_IDENTIFIER
    (116) equation -> . _identifier _patterns EQ expr
    (117) equation -> . _enclosed_operator _patterns EQ expr
    (54) _enclosed_operator -> . LPAREN _st_operator RPAREN

    KEYWORD_CLASS   shift and go to state 11
    KEYWORD_INSTANCE shift and go to state 12
    LPAREN          shift and go to state 14
    KEYWORD_DATA    shift and go to state 16
    UNDER_IDENTIFIER shift and go to state 18
    UPPER_IDENTIFIER shift and go to state 17
    LOWER_IDENTIFIER shift and go to state 19

    program                        shift and go to state 1
    definitions                    shift and go to state 2
    definition                     shift and go to state 3
    local_definition               shift and go to state 4
    datatype_definition            shift and go to state 5
    typeclass                      shift and go to state 6
    instance                       shift and go to state 7
    nametype_decl                  shift and go to state 8
    valuedef                       shift and go to state 9
    _datatype_lhs                  shift and go to state 10
    _identifier                    shift and go to state 13
    equation                       shift and go to state 15
    _enclosed_operator             shift and go to state 20

state 1

    (0) S' -> program .



state 2

    (157) program -> definitions . _trailing_new_lines
    (158) _trailing_new_lines -> . empty
    (159) _trailing_new_lines -> . NEWLINE _trailing_new_lines
    (81) empty -> .

    NEWLINE         shift and go to state 23
    $end            reduce using rule 81 (empty -> .)

    _trailing_new_lines            shift and go to state 21
    empty                          shift and go to state 22

state 3

    (160) definitions -> definition . _definition_set
    (161) _definition_set -> . newlines definition _definition_set
    (163) _definition_set -> . empty
    (164) _definition_set -> . newlines
    (162) newlines -> . NEWLINE _trailing_new_lines
    (81) empty -> .

  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 27
    $end            reduce using rule 81 (empty -> .)

  ! NEWLINE         [ reduce using rule 81 (empty -> .) ]

    _definition_set                shift and go to state 24
    newlines                       shift and go to state 25
    empty                          shift and go to state 26

state 4

    (165) definition -> local_definition .

    NEWLINE         reduce using rule 165 (definition -> local_definition .)
    $end            reduce using rule 165 (definition -> local_definition .)
    PADDING         reduce using rule 165 (definition -> local_definition .)
    KEYWORD_IN      reduce using rule 165 (definition -> local_definition .)


state 5

    (166) definition -> datatype_definition .

    NEWLINE         reduce using rule 166 (definition -> datatype_definition .)
    $end            reduce using rule 166 (definition -> datatype_definition .)
    PADDING         reduce using rule 166 (definition -> datatype_definition .)
    KEYWORD_IN      reduce using rule 166 (definition -> datatype_definition .)


state 6

    (167) definition -> typeclass .

    NEWLINE         reduce using rule 167 (definition -> typeclass .)
    $end            reduce using rule 167 (definition -> typeclass .)
    PADDING         reduce using rule 167 (definition -> typeclass .)
    KEYWORD_IN      reduce using rule 167 (definition -> typeclass .)


state 7

    (168) definition -> instance .

    NEWLINE         reduce using rule 168 (definition -> instance .)
    $end            reduce using rule 168 (definition -> instance .)
    PADDING         reduce using rule 168 (definition -> instance .)
    KEYWORD_IN      reduce using rule 168 (definition -> instance .)


state 8

    (169) local_definition -> nametype_decl .

    NEWLINE         reduce using rule 169 (local_definition -> nametype_decl .)
    $end            reduce using rule 169 (local_definition -> nametype_decl .)
    PADDING         reduce using rule 169 (local_definition -> nametype_decl .)
    KEYWORD_IN      reduce using rule 169 (local_definition -> nametype_decl .)


state 9

    (170) local_definition -> valuedef .

    NEWLINE         reduce using rule 170 (local_definition -> valuedef .)
    $end            reduce using rule 170 (local_definition -> valuedef .)
    PADDING         reduce using rule 170 (local_definition -> valuedef .)
    KEYWORD_IN      reduce using rule 170 (local_definition -> valuedef .)


state 10

    (184) datatype_definition -> _datatype_lhs . EQ _data_rhs

    EQ              shift and go to state 28


state 11

    (174) typeclass -> KEYWORD_CLASS . _typeclass_def KEYWORD_WHERE PADDING local_definitions
    (175) _typeclass_def -> . simple_type_constraint
    (176) _typeclass_def -> . simple_type_constraints FATARROW simple_type_constraint
    (177) simple_type_constraint -> . UPPER_IDENTIFIER SPACE type_variable
    (178) simple_type_constraints -> . simple_type_constraint _simple_type_constraints

    UPPER_IDENTIFIER shift and go to state 32

    _typeclass_def                 shift and go to state 29
    simple_type_constraint         shift and go to state 30
    simple_type_constraints        shift and go to state 31

state 12

    (153) instance -> KEYWORD_INSTANCE . _maybe_constrained_type_expr KEYWORD_WHERE PADDING local_definitions
    (151) _maybe_constrained_type_expr -> . type_expr
    (152) _maybe_constrained_type_expr -> . _constrained_type_expr_bare
    (124) type_expr -> . type_scheme type_function_expr
    (125) type_expr -> . type_scheme type_term
    (150) _constrained_type_expr_bare -> . type_constraints FATARROW type_expr
    (126) type_scheme -> . empty
    (127) type_scheme -> . KEYWORD_FORALL SPACE _type_scheme_generics
    (154) type_constraints -> . _type_expr_list_trail
    (81) empty -> .
    (145) _type_expr_list_trail -> . type_expr COMMA _type_expr_list_trail
    (146) _type_expr_list_trail -> . type_expr

    KEYWORD_FORALL  shift and go to state 39
    LPAREN          reduce using rule 81 (empty -> .)
    LBRACKET        reduce using rule 81 (empty -> .)
    LOWER_IDENTIFIER reduce using rule 81 (empty -> .)
    UPPER_IDENTIFIER reduce using rule 81 (empty -> .)

    _maybe_constrained_type_expr   shift and go to state 33
    type_expr                      shift and go to state 34
    _constrained_type_expr_bare    shift and go to state 35
    type_scheme                    shift and go to state 36
    type_constraints               shift and go to state 37
    empty                          shift and go to state 38
    _type_expr_list_trail          shift and go to state 40

state 13

    (182) nametype_decl -> _identifier . DOUBLE_COLON st_type_expr
    (116) equation -> _identifier . _patterns EQ expr
    (108) _patterns -> . SPACE pattern _patterns
    (109) _patterns -> . SPACE simple_pattern _patterns
    (114) _patterns -> . empty
    (81) empty -> .

    DOUBLE_COLON    shift and go to state 41
    SPACE           shift and go to state 43
    EQ              reduce using rule 81 (empty -> .)

    _patterns                      shift and go to state 42
    empty                          shift and go to state 44

state 14

    (183) nametype_decl -> LPAREN . _st_operator RPAREN DOUBLE_COLON st_type_expr
    (54) _enclosed_operator -> LPAREN . _st_operator RPAREN
    (67) _st_operator -> . infixl_operator_2
    (68) _st_operator -> . infixr_operator_2
    (69) _st_operator -> . infixl_operator_6
    (70) _st_operator -> . infixl_operator_7
    (71) _st_operator -> . infixr_operator_9
    (72) _st_operator -> . COMMA
    (63) infixl_operator_2 -> . OPERATOR
    (64) infixl_operator_2 -> . ARROW
    (65) infixl_operator_2 -> . ATSYM
    (62) infixr_operator_2 -> . COLON
    (60) infixl_operator_6 -> . PLUS
    (61) infixl_operator_6 -> . MINUS
    (56) infixl_operator_7 -> . STAR
    (57) infixl_operator_7 -> . SLASH
    (58) infixl_operator_7 -> . DOUBLESLASH
    (59) infixl_operator_7 -> . PERCENT
    (55) infixr_operator_9 -> . DOT_OPERATOR

    COMMA           shift and go to state 51
    OPERATOR        shift and go to state 52
    ARROW           shift and go to state 53
    ATSYM           shift and go to state 54
    COLON           shift and go to state 55
    PLUS            shift and go to state 56
    MINUS           shift and go to state 57
    STAR            shift and go to state 58
    SLASH           shift and go to state 59
    DOUBLESLASH     shift and go to state 60
    PERCENT         shift and go to state 61
    DOT_OPERATOR    shift and go to state 62

    _st_operator                   shift and go to state 45
    infixl_operator_2              shift and go to state 46
    infixr_operator_2              shift and go to state 47
    infixl_operator_6              shift and go to state 48
    infixl_operator_7              shift and go to state 49
    infixr_operator_9              shift and go to state 50

state 15

    (181) valuedef -> equation .

    NEWLINE         reduce using rule 181 (valuedef -> equation .)
    $end            reduce using rule 181 (valuedef -> equation .)
    PADDING         reduce using rule 181 (valuedef -> equation .)
    KEYWORD_IN      reduce using rule 181 (valuedef -> equation .)


state 16

    (185) _datatype_lhs -> KEYWORD_DATA . SPACE UPPER_IDENTIFIER _cons_params

    SPACE           shift and go to state 63


state 17

    (48) _identifier -> UPPER_IDENTIFIER .

    DOUBLE_COLON    reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    SPACE           reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    EQ              reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    DOT_OPERATOR    reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    KEYWORD_WHERE   reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    TICK_OPERATOR   reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    NEWLINE         reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    $end            reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    PADDING         reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    KEYWORD_IN      reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    LPAREN          reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    STAR            reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    SLASH           reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    DOUBLESLASH     reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    PERCENT         reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    PLUS            reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    MINUS           reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    COLON           reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    OPERATOR        reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    ARROW           reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    ATSYM           reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    RPAREN          reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    COMMA           reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)
    RBRACKET        reduce using rule 48 (_identifier -> UPPER_IDENTIFIER .)


state 18

    (47) _identifier -> UNDER_IDENTIFIER .

    DOUBLE_COLON    reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    SPACE           reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    EQ              reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    DOT_OPERATOR    reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    KEYWORD_WHERE   reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    TICK_OPERATOR   reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    NEWLINE         reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    $end            reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    PADDING         reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    KEYWORD_IN      reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    LPAREN          reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    STAR            reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    SLASH           reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    DOUBLESLASH     reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    PERCENT         reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    PLUS            reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    MINUS           reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    COLON           reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    OPERATOR        reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    ARROW           reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    ATSYM           reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    RPAREN          reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    COMMA           reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)
    RBRACKET        reduce using rule 47 (_identifier -> UNDER_IDENTIFIER .)


state 19

    (49) _identifier -> LOWER_IDENTIFIER .

    DOUBLE_COLON    reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    SPACE           reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    EQ              reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    DOT_OPERATOR    reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    KEYWORD_WHERE   reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    TICK_OPERATOR   reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    NEWLINE         reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    $end            reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    PADDING         reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    KEYWORD_IN      reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    LPAREN          reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    STAR            reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    SLASH           reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    DOUBLESLASH     reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    PERCENT         reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    PLUS            reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    MINUS           reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    COLON           reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    OPERATOR        reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    ARROW           reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    ATSYM           reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    RPAREN          reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    COMMA           reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)
    RBRACKET        reduce using rule 49 (_identifier -> LOWER_IDENTIFIER .)


state 20

    (117) equation -> _enclosed_operator . _patterns EQ expr
    (108) _patterns -> . SPACE pattern _patterns
    (109) _patterns -> . SPACE simple_pattern _patterns
    (114) _patterns -> . empty
    (81) empty -> .

    SPACE           shift and go to state 43
    EQ              reduce using rule 81 (empty -> .)

    _patterns                      shift and go to state 64
    empty                          shift and go to state 44

state 21

    (157) program -> definitions _trailing_new_lines .

    $end            reduce using rule 157 (program -> definitions _trailing_new_lines .)


state 22

    (158) _trailing_new_lines -> empty .
